--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,18 @@
+logging:
+    file:
+        name: app.log
 server:
     port: 9000
 spring:
     datasource:
-        driver-class-name: org.h2.Driver
-        password: password
-        url: jdbc:h2:file:./data/demodb
-        username: sa
+        username: ${DB_USERNAME}
+        password: ${DB_PASSWORD}
+        url: ${DB_URL}
+        driver-class-name: ${DRIVER_CLASS_NAME}
     jpa:
         hibernate:
             ddl-auto: update
+        properties:
+            hibernate:
+                show_sql: true
+                dialect: org.hibernate.dialect.MySQL8Dialect
